fixed alignment of article

--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body {
     background: #777;
     width: 960px;
     font-size: 18px; 
-    text-align: center; 
+    text-align: center;
+    margin: auto;
+    margin-top: 10px; 
 }
 
 
@@ -30,9 +32,9 @@ section {
 article {
     color: #ebebeb;
     background: #777;
-    padding-top: 20px;
+    padding-top: 15px;
     margin: 10px;
-    margin-top: 20px;
+    margin-top: 30px;
     padding-bottom: 10px;
 }
 
@@ -42,6 +44,7 @@ h1, p {
     padding: 10px;
     width: 90%;
     margin-left: 15px;
+    margin-bottom: 0px
 }
 
 aside {
@@ -64,8 +67,14 @@ footer {
 }
 p { 
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .flex-container {
     display: flex;
     flex-wrap: nowrap;
+}
+
+h1 {
+    margin-top: 15px;
+}
